Codespace再作成前の安全な保存

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,18 @@
 {
-	"image": "mcr.microsoft.com/devcontainers/base:debian",
-	"features": {
-		"ghcr.io/devcontainers/features/node:1": {}
-	},
-	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y ffmpeg build-essential cmake python3-venv",
-	"portsAttributes": {
-		"8000": {
-			"label": "Backend (FastAPI)",
-			"visibility": "public"
-		},
-		"3000": {
-			"label": "Frontend (Next.js)",
-			"onAutoForward": "openPreview"
-		}
-	},
-	"remoteEnv": {
-		"NEXT_PUBLIC_API_URL": "https://${localEnv:CODESPACE_NAME}-8000.app.github.dev"
-	}
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
+  "features": {
+    "ghcr.io/devcontainers/features/node:1": {}
+  },
+  "portsAttributes": {
+    "8000": {
+      "label": "Backend (FastAPI)",
+      "visibility": "public"
+    },
+    "3000": {
+      "label": "Frontend (Next.js)",
+      "onAutoForward": "openPreview"
+    }
+  }
 }
