fix(frontend): Correct data handling on history page

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,16 @@
-// 正しいファイルパス: /.devcontainer/devcontainer.json
+// /.devcontainer/devcontainer.json
 
 {
   "name": "Trustalk Project Codespace",
-  // Microsoft公式のPython&Node.js環境イメージを直接指定
   "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
 
   "features": {
-    // Node.js (フロントエンド用) をインストールする機能
-    "ghcr.io/devcontainers/features/node:1": {}
+    "ghcr.io/devcontainers/features/node:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   },
 
-  // 起動後に実行するコマンド
-  // ★★★★★ この行の末尾に libsndfile1-dev を追加しました ★★★★★
   "postCreateCommand": "sudo apt-get update && sudo apt-get install -y ffmpeg build-essential cmake libsndfile1-dev",
 
-  // ポートの設定
   "portsAttributes": {
     "8000": {
       "label": "Backend (FastAPI)",
@@ -25,13 +21,11 @@
       "onAutoForward": "openPreview"
     }
   },
-  
-  // フロントエンド用の環境変数
+
   "remoteEnv": {
     "NEXT_PUBLIC_API_URL": "https://${localEnv:CODESPACE_NAME}-8000.app.github.dev"
   },
-  
-  // VSCodeの推奨拡張機能
+
   "customizations": {
     "vscode": {
       "extensions": [
